# file_hash

./: README.md  bench.exs  mix.exs
data/: 1  10  100  1000
lib/: file_hash.ex
server/: Cargo.toml  README.md
server/src/: main.rs  mutool.rs
